<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="35dp"
        android:orientation="vertical"
        android:paddingTop="35dp"
        android:paddingBottom="60dp"
        tools:context=".views.RegisterFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="@string/txt_register_header"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/txt_register_subheader"
            android:textColor="@color/light_gray"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/txt_username"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="7dp"
            android:background="@android:color/transparent"
            android:elevation="3dp"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:passwordToggleEnabled="false"
            app:passwordToggleTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUser"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bottom_border"
                android:fontFamily="@font/sf_pro_display_semibold"
                android:hint="@string/txt_username_hint"
                android:inputType="textPersonName"
                android:paddingVertical="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/light_gray"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/txt_email"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="7dp"
            android:background="@android:color/transparent"
            android:elevation="3dp"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:passwordToggleEnabled="false"
            app:passwordToggleTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bottom_border"
                android:fontFamily="@font/sf_pro_display_semibold"
                android:hint="@string/txt_email_hint"
                android:inputType="textEmailAddress"
                android:paddingVertical="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/light_gray"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/txt_password"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signupPasswordETLayout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="7dp"
            android:background="@android:color/transparent"
            android:elevation="3dp"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bottom_border"
                android:fontFamily="@font/sf_pro_display_semibold"
                android:hint="@string/txt_password_hint"
                android:inputType="textPassword"
                android:paddingVertical="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/light_gray"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txt_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text=""
            android:textColor="@color/highlight_text_color"
            android:textSize="12sp" />

        <Button
            android:id="@+id/signUpBtn"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="@string/txt_sign_up"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvLoginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:text="@string/txt_already_have_account"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal" />

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/progress_bar"
            style="@style/SpinKitView.ThreeBounce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="gone"
            app:SpinKit_Color="@color/black" />

    </LinearLayout>

</ScrollView>

